tdf#128320: RTF export: do not write shape attrs for postponed shape

If graphical object is postponed (here stored in m_aRunText for later
writing) it is wrong to write shape attributes right now. Anyway they
wll be written during shape output in a correct destination.

Change-Id: I1835485870648d4f1e363d34a3f58e390672442f
Reviewed-on: https://gerrit.libreoffice.org/85227
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 7b26e517d50ca4c34fa7a6291948fb200b2e5d71)
Reviewed-on: https://gerrit.libreoffice.org/85274